--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1293,6 +1293,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'WTF.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/28761/'
+        name: 'WTF - Random Encounter Zones'
     group: *latePatchGroup
     msg:
       - type: say
