--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -987,6 +987,7 @@ plugins:
       - crc: 0x1DD2CB8E
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'SoS - The Dungeons(-Patch(CoTHardcore|RCRN|RLO.*|SPO))?\.esp'
   - name: 'SoS - The Dungeons.esp'
     msg:
       - <<: *patchProvided
