--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -988,6 +988,11 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'SoS - The Dungeons(-Patch(CoTHardcore|RCRN|RLO.*|SPO))?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/8601/'
+        name: 'Sounds of Skyrim - The Dungeons'
+      - link: 'https://www.elderscrollsportal.de/ressourcen/sounds-of-skyrim-the-dungeons-die-hoehlen-und-ruinen.2448/'
+        name: 'Sounds of Skyrim - The Dungeons (Die Höhlen und Ruinen)'
   - name: 'SoS - The Dungeons.esp'
     msg:
       - <<: *patchProvided
