Update `patchProvided` messages
  * Remove redundant acronyms.
  * Sort alphabetically by subs.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -999,17 +999,17 @@ plugins:
         subs: [ 'Climates Of Tamriel Dungeons Hardcore' ]
         condition: 'file("ClimatesOfTamriel-Dungeons-Hardcore.esp") and not file("SoS - The Dungeons-PatchCoTHardcore.esp")'
       - <<: *patchProvided
-        subs: [ 'RLO Dungeons' ]
-        condition: 'file("Realistic Lighting Overhaul - Dungeons.esp") and not file("SoS - The Dungeons-PatchRLODungeons.esp")'
+        subs: [ 'Realistic Colors & Real Nights AE' ]
+        condition: 'file("rcrnShaders.esp") and not file("SoS - The Dungeons-PatchRCRN.esp")'
+      - <<: *patchProvided
+        subs: [ 'Realistic Colors & Real Nights Plus' ]
+        condition: 'active("rcrnPlus.esp") and not active("SoS - The Dungeons-PatchRCRN.esp")'
       - <<: *patchProvided
         subs: [ 'RLO Dungeon Lighting' ]
         condition: 'file("Realistic Lighting Overhaul - Dungeon Lighting.esp") and not file("SoS - The Dungeons-PatchRLODungeonLighting.esp")'
       - <<: *patchProvided
-        subs: [ '(RCRN AE) Realistic Colors & Real Nights AE' ]
-        condition: 'file("rcrnShaders.esp") and not file("SoS - The Dungeons-PatchRCRN.esp")'
-      - <<: *patchProvided
-        subs: [ '(RCRN  Plus) Realistic Colors & Real Nights Plus' ]
-        condition: 'active("rcrnPlus.esp") and not active("SoS - The Dungeons-PatchRCRN.esp")'
+        subs: [ 'RLO Dungeons' ]
+        condition: 'file("Realistic Lighting Overhaul - Dungeons.esp") and not file("SoS - The Dungeons-PatchRLODungeons.esp")'
   - name: 'SoS - The Dungeons-PatchRCRN.esp'
 
 ###### AudioVisual - Weather & Lighting ######
