--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1011,6 +1011,7 @@ plugins:
         subs: [ 'RLO Dungeons' ]
         condition: 'file("Realistic Lighting Overhaul - Dungeons.esp") and not file("SoS - The Dungeons-PatchRLODungeons.esp")'
 
+  - name: 'SoS - The Wilds(-Patch(CoT.*|RCRN|SPO))?\.esp'
   - name: 'SoS - The Wilds.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/10886/'
