Update `patchProvided` messages
  * Remove redundant acronyms.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1021,10 +1021,10 @@ plugins:
         subs: [ 'Climates Of Tamriel' ]
         condition: 'file("ClimatesOfTamriel.esm") and not file("SoS - The Wilds-PatchCoT.*\.esp") and not file("WAO-WeatherAndAmbienceOverhaul.esp")'
       - <<: *patchProvided
-        subs: [ '(RCRN AE) Realistic Colors & Real Nights AE' ]
+        subs: [ 'Realistic Colors & Real Nights AE' ]
         condition: 'file("rcrnShaders.esp") and not file("SoS - The Wilds-PatchRCRN.esp")'
       - <<: *patchProvided
-        subs: [ '(RCRN  Plus) Realistic Colors & Real Nights Plus' ]
+        subs: [ 'Realistic Colors & Real Nights Plus' ]
         condition: 'active("rcrnPlus.esp") and not active("SoS - The Wilds-PatchRCRN.esp")'
       - type: say
         content:
