--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1014,7 +1014,7 @@ plugins:
             text: 'このMod用のCrash Fix ESPは使用しないでください。マスターファイルとしてのフラグが立ちます。クラッシュを修正するための最後の手段としてください。'
           - lang: ru
             text: 'Не используйте Crash Fix ESP для этого мода. Он помечен как мастерфайл и предназначен только как последнее средство для исправления вылетов.'
-  - name: 'SoS - Civilization( -|-| - )PatchCoT(Sounds)?(WinterEdition)?\.esp'
+  - name: 'SoS - Civilization ?-PatchCoT(Sounds)?(WinterEdition)?\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("SoS - Civilization( -|-| - )PatchCoT(Sounds)?(WinterEdition)?\.esp")'
