--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -988,6 +988,11 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'SoS - Civilization( ?-Patch(CoT.*|RCRN|RLO.*|SPO))?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/20193/'
+        name: 'Sounds of Skyrim - Civilization'
+      - link: 'https://www.elderscrollsportal.de/ressourcen/sounds-of-skyrim-civilization-zivilisation.2566/'
+        name: 'Sounds of Skyrim - Civilization (Zivilisation)'
   - name: 'SoS - Civilization.esp'
     msg:
       - <<: *patchProvided
