Update `useOnlyOneX` message
  * Sort `subs` key before `condition` key.
  * Simplify regex.
  * No patches have space after hyphen.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1013,8 +1013,8 @@ plugins:
   - name: 'SoS - Civilization ?-PatchCoT(Sounds)?(WinterEdition)?\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("SoS - Civilization( -|-| - )PatchCoT(Sounds)?(WinterEdition)?\.esp")'
         subs: [ 'Sounds of Skyrim - Civilization and CoT patch' ]
+        condition: 'many("SoS - Civilization ?-PatchCoT(Sounds)?(WinterEdition)?\.esp")'
   - name: 'SoS - Civilization-PatchRCRN.esp'
 
   - name: 'SoS - The Dungeons(-Patch(CoTHardcore|RCRN|RLO.*|SPO))?\.esp'
