Update Sounds of Skyrim - The Wilds (Die Wildnis)
* Add location
  * https://www.elderscrollsportal.de/ressourcen/sounds-of-skyrim-the-wilds-die-wildnis.2447/

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1044,6 +1044,8 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/10886/'
         name: 'Sounds of Skyrim - The Wilds'
+      - link: 'https://www.elderscrollsportal.de/ressourcen/sounds-of-skyrim-the-wilds-die-wildnis.2447/'
+        name: 'Sounds of Skyrim - The Wilds (Die Wildnis)'
   - name: 'SoS - The Wilds.esp'
     msg:
       - <<: *patchProvided
