--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1917,8 +1917,8 @@ plugins:
   - name: 'TownsAndCitiesEnhanced.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/17406/'
-        name: 'Towns and Villages Enhanced - Villages (Nexus)'
-      - link: 'https://steamcommunity.com/sharedfiles/filedetails/?id=68336872'
+        name: 'Towns and Villages Enhanced - Villages (Nexus Mods)'
+      - link: 'https://steamcommunity.com/sharedfiles/filedetails/?id=68336872/'
         name: 'Towns and Villages Enhanced - Villages (Steam Workshop)'
     msg:
       - type: say
