Update cleaning data
  * Sort original before UFO version.
  * Add comment to help organize.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1277,13 +1277,14 @@ plugins:
         condition: '(checksum("KTNUlfric.esp", 8CF90F55) or checksum("KTNUlfric.esp", B974D654)) and active("UFO - Ultimate Follower Overhaul.esp")'
     dirty:
       - <<: *quickClean
-        crc: 0x35CB3586
-        util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 16
-      - <<: *quickClean
         crc: 0x8CF90F55
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 19
+      # UFO
+      - <<: *quickClean
+        crc: 0x35CB3586
+        util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 16
 
 ###### Encounters - Enemies ######
   - name: 'Bandit Raid.esp'
