--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -910,6 +910,7 @@ plugins:
       - crc: 0x23E4EB08
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'GuardAnimations(GDO)?\.esp'
   - name: 'GuardAnimations.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/52326/' ]
     msg:
