--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -911,8 +911,10 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'GuardAnimations(GDO)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/52326/'
+        name: 'Respectful Guard Animations'
   - name: 'GuardAnimations.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/52326/' ]
     msg:
       - type: warn
         condition: 'active("Guard Dialogue Overhaul.esp")'
