Add `useOnlyOneX` message
  * Only one version should be used at once.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -914,6 +914,10 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/52326/'
         name: 'Respectful Guard Animations'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'Respectful Guard Animations ESP' ]
+        condition: 'many("GuardAnimations(GDO)?\.esp")'
   - name: 'GuardAnimations.esp'
     msg:
       - <<: *useVersion
