--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -864,6 +864,7 @@ plugins:
       - crc: 0x9700EC44
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'Remove Interior Fog V2 - .+\.esp'
   - name: 'Remove Interior Fog V2 - Full Version.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/29253/' ]
     msg:
@@ -882,6 +883,7 @@ plugins:
         crc: 0x4FD63CD3
         util: '[TES5Edit v4.0.2j](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 3
+  - name: 'Remove Interior Fog V2 - (Dawnguard|Dragonborn|Full Version - NH|Hearthfire|Skyrim)\.esp'
   - name: 'Remove Interior Fog V2 - Skyrim.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/29253/' ]
     inc: [ 'RemoveAmbientInteriorFog.esp' ]
