--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -865,8 +865,10 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'Remove Interior Fog V2 - .+\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/29253/'
+        name: 'Remove Interior Fog V2'
   - name: 'Remove Interior Fog V2 - Full Version.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/29253/' ]
     msg:
       - type: error
         content:
@@ -885,7 +887,6 @@ plugins:
         itm: 3
   - name: 'Remove Interior Fog V2 - (Dawnguard|Dragonborn|Full Version - NH|Hearthfire|Skyrim)\.esp'
   - name: 'Remove Interior Fog V2 - Skyrim.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/29253/' ]
     inc: [ 'RemoveAmbientInteriorFog.esp' ]
     msg:
       - type: say
