--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1340,6 +1340,8 @@ plugins:
       - crc: 0xA133C0B8
         util: 'TES5Edit v4.0.4c'
 
+  - name: 'Skyrim Immersive Creatures( - DLC2)?\.esp'
+  - name: 'Skyrim Immersive Creatures\.es[mp]'
   - name: 'Skyrim Immersive Creatures.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/24913/' ]
     after:
