--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1341,9 +1341,11 @@ plugins:
         util: 'TES5Edit v4.0.4c'
 
   - name: 'Skyrim Immersive Creatures( - DLC2)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/24913/'
+        name: 'Skyrim Immersive Creatures'
   - name: 'Skyrim Immersive Creatures\.es[mp]'
   - name: 'Skyrim Immersive Creatures.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/24913/' ]
     after:
       - 'Sleeping Dangers - Sands of Time.esp'
       - 'SleepingDangers-SandsofTime.esp'
@@ -1368,7 +1370,6 @@ plugins:
       - crc: 0xBA4FDA63
         util: 'TES5Edit v4.0.2f'
   - name: 'Skyrim Immersive Creatures - DLC2.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/24913/' ]
     msg:
       - type: error
         content:
