--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1345,6 +1345,9 @@ plugins:
       - link: 'https://www.nexusmods.com/skyrim/mods/24913/'
         name: 'Skyrim Immersive Creatures'
   - name: 'Skyrim Immersive Creatures\.es[mp]'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/31256/'
+        name: 'Skyrim Immersive Creatures v5 - Purist Lore-Friendly'
   - name: 'Skyrim Immersive Creatures.esp'
     after:
       - 'Sleeping Dangers - Sands of Time.esp'
