--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1352,9 +1352,7 @@ plugins:
     after:
       - 'Sleeping Dangers - Sands of Time.esp'
       - 'SleepingDangers-SandsofTime.esp'
-    inc:
-      - name: 'Skyrim Immersive Creatures.esm'
-        condition: 'not checksum("Skyrim Immersive Creatures.esp", 2EEAD88A)'
+    inc: [ 'Skyrim Immersive Creatures.esm' ]
     msg:
       - type: say
         content:
