Remove unaliased message
  * Redundant with incompatibility (can't be used with ESP as they share
    filename).

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1353,17 +1353,7 @@ plugins:
       - 'Sleeping Dangers - Sands of Time.esp'
       - 'SleepingDangers-SandsofTime.esp'
     inc: [ 'Skyrim Immersive Creatures.esm' ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'This is the Lore-Friendly version by jackstarr. Do not use the original esp or esm by lifestorock.'
-          - lang: de
-            text: 'Dies ist die Lore-Freundliche-Version von jackstarr. Verwenden Sie nicht die Original esp oder esm von lifestorock.'
-          - lang: ja
-            text: 'このEspはjackstarr氏によるロアフレンドリーバージョンです。lifestorock氏によるオリジナル版のEspもしくはEsmは使用しないでください。'
-        condition: 'checksum("Skyrim Immersive Creatures.esp", 2EEAD88A)'
-      - *patchUnavailableRequiem
+    msg: [ *patchUnavailableRequiem ]
     tag:
       - Delev
       - Relev
