--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1411,7 +1411,7 @@ plugins:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 02 - (Enhanced Fauna and Monsters for Skyrim|EFMS very bigger giant mammoths)\.esp")'
         subs: [ 'ERSO 02 .esp file' ]
-  - name: '(ERSO 03 - )?(Soft)?(Super)?(Nightmare)?(Slighty| Slighty)?(Mighty| Mighty)? Dragons( Unleveled)?( v\.\d\.\d)?\.esp'
+  - name: 'ERSO 03 - (Soft)?(Super)?(Nightmare)?( ?Slighty)?( ?Mighty)? Dragons( Unleveled)?\.esp'
     msg:
       - type: say
         content:
@@ -1447,44 +1447,44 @@ plugins:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 13 - MD - (A Better Level Progression|ABLP 50 Hardcore)\.esp")'
         subs: [ 'ERSO 13 .esp file' ]
-  - name: 'ERSO 13.02 .*\.esp'
+  - name: 'ERSO 13\.02 .*\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 13.02 .*\.esp")'
         subs: [ 'ERSO 13.02 .esp file' ]
   - name: 'ERSO 14 - Vendors richer and Inns more expensive.esp'
     tag: [ Relev ]
-  - name: 'ERSO 14.02 .*\.esp'
+  - name: 'ERSO 14\.02 .*\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 14.02 .*\.esp")'
         subs: [ 'ERSO 14.02 .esp file' ]
-  - name: 'ERSO 14.03 .*\.esp'
+  - name: 'ERSO 14\.03 .*\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 14.03 .*\.esp")'
         subs: [ 'ERSO 14.03 .esp file' ]
-  - name: 'ERSO 14.04 .*\.esp'
+  - name: 'ERSO 14\.04 .*\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 14.04 .*\.esp")'
         subs: [ 'ERSO 14.04 .esp file' ]
-  - name: 'ERSO 14.05 .*\.esp'
+  - name: 'ERSO 14\.05 .*\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 14.05 .*\.esp")'
         subs: [ 'ERSO 14.05 .esp file' ]
-  - name: 'ERSO 14.06 .*\.esp'
+  - name: 'ERSO 14\.06 .*\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 14.06 .*\.esp")'
         subs: [ 'ERSO 14.06 .esp file' ]
-  - name: 'ERSO 14.07 .*\.esp'
+  - name: 'ERSO 14\.07 .*\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 14.07 .*\.esp")'
         subs: [ 'ERSO 14.07 .esp file' ]
-  - name: 'ERSO 14.08 .*\.esp'
+  - name: 'ERSO 14\.08 .*\.esp'
     msg:
       - <<: *useOnlyOneX
         condition: 'many("ERSO 14.08 .*\.esp")'
