--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1401,6 +1401,7 @@ plugins:
         itm: 7
 
 ###### Gameplay ######
+  - name: 'ERSO \d{2}.+\.esp'
   - name: 'ERSO 01 - (Vanilla Races Redone|VRR.+)\.esp'
     msg:
       - <<: *useOnlyOneX
