--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1402,6 +1402,9 @@ plugins:
 
 ###### Gameplay ######
   - name: 'ERSO \d{2}.+\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/73222/'
+        name: 'Erkeil Real Skyrim Overhaul Legendary Edition'
   - name: 'ERSO 01 - (Vanilla Races Redone|VRR.+)\.esp'
     msg:
       - <<: *useOnlyOneX
